# BirdClef_Tufts

./: .env.example  .gitignore  404.html  CREDITS.md  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json
architecture/: index.html
config_reference/: index.html
configs/: base.yaml  baselines.yaml
configs/experiments/: fast_debug.yaml  v16_baseline.yaml  v18_pantanal.yaml  v19_medium.yaml  v19_safe.yaml
contributing/: index.html
data/: README.md
docs/: architecture.md  config_reference.md  contributing.md  ideas.md  ideas_v2.md  index.md  mkdocs.yml  neuropt_guide.md  notebook_export.md  pipeline.md  resources.md  timer_guide.md
ideas/: index.html
neuropt_guide/: index.html
notebook_export/: index.html
notebooks/: ssl_gpu_train.ipynb  ssl_gpu_train.py  train_cnn_gpu.ipynb  train_cnn_gpu.py
notebooks/legacy/: birdclef-2026-neuropt-mhtan.ipynb  birdclef-2026-neuropt-protossm-v5-clean.ipynb  birdclef-2026-neuropt-protossm-v5.ipynb  birdclef-2026-neuropt-submit-final.ipynb  birdclef-2026-neuropt-submit-v2.ipynb  birdclef-2026-neuropt-timeopt-submit.ipynb  (+8 more)
pipeline/: index.html
resources/: index.html
scripts/: evaluate.py  export_notebook.py  extract_all_embeddings.py  optimize.py  profile_time.py  ssl_pretrain.py  train.py
search/: search_index.json
src/: constants.py  pipeline.py  tracking.py  tracking_plots.py
tests/: conftest.py  test_bundle.py  test_config.py  test_data.py  test_evaluation.py  test_models.py  test_scoring.py  test_timer.py  test_training.py
timer_guide/: index.html
(+39 files in other folders)
